# consoleSnake

./: Cargo.toml  README.md
src/: main.rs
